--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <div class="wrap">
       <header class="head-container">
-        <div><h2 class="textname">User Entred Name</h2></div>
+        <div>
+          <h2 class="textname">User Entername print this place Name</h2>
+        </div>
         <nav class="navbar">
           <ul>
             <li class="home-tag"><a href="\" style="color: white">Home</a></li>
