--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrap">
       <header class="head-container">
         <div>
-          <h2 class="textname">User Entername print this place Name</h2>
+          <h2 class="textname"> User Name </h2>
         </div>
         <nav class="navbar">
           <ul>
